feat(api-docs) add login request
